force-app/main/default/objects/synety__Last_Number_Called__c/synety__Last_Number_Called__c.object-meta.xml
<CustomObject>
    <label>Last Number Called</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Last Numbers Called</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>