force-app/main/default/objects/synety__Last_Number_Called__c/fields/synety__Number_Called__c.field-meta.xml
<CustomField>
    <fullName>synety__Number_Called__c</fullName>
    <label>Number Called</label>
    <length>50</length>
    <type>Text</type>
</CustomField>