force-app/main/default/objects/synety__Last_Number_Called__c/fields/synety__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>