force-app/main/default/objects/synety__Last_Number_Called__c/fields/synety__Record_Id_Unique__c.field-meta.xml
<CustomField>
    <fullName>synety__Record_Id_Unique__c</fullName>
    <externalId>true</externalId>
    <label>Record Id Unique</label>
    <length>20</length>
    <type>Text</type>
</CustomField>